--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,6 +19,7 @@
     <!-- If no recipe yet, show: -->
     <h2>Pick your favourite taco ingredient 👆</h2>
     <!-- Else, show the recipe name e.g. <h2>Recipe name</h2>-->
+    <!-- gNo way -->
 
     <h3>Ingredients:</h3>
     <ul id="ingredientsList">
